@@ -13,14 +13,13 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
 
 import com.powsybl.cgmes.model.CgmesModel;
 import com.powsybl.cgmes.model.CgmesNames;
 import com.powsybl.triplestore.api.PropertyBag;
 
 /**
- * @author Luma Zamarreño <zamarrenolm at aia.es>
+ * @author Luma Zamarreño {@literal <zamarrenolm at aia.es>}
  */
 public class ReportTapChangers {
 
@@ -149,7 +148,7 @@ public class ReportTapChangers {
                 long ptc2 = tcs.stream().filter(tc -> end(tc) == 2 && isPhase(tc)).count();
                 long rtc3 = tcs.stream().filter(tc -> end(tc) == 3 && isRatio(tc)).count();
                 long ptc3 = tcs.stream().filter(tc -> end(tc) == 3 && isPhase(tc)).count();
-                List<Integer> steps = tcs.stream().map(this::steps).collect(Collectors.toList());
+                List<Integer> steps = tcs.stream().map(this::steps).toList();
                 boolean sameSteps = steps.isEmpty()
                         || steps.stream().allMatch(steps.get(0)::equals);
                 d.col(tcs.size());
