@@ -8,20 +8,18 @@ package com.powsybl.contingency.json;
 
 import com.fasterxml.jackson.core.JsonParser;
 import com.fasterxml.jackson.core.JsonToken;
-import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.DeserializationContext;
 import com.fasterxml.jackson.databind.deser.std.StdDeserializer;
+import com.powsybl.commons.json.JsonUtil;
 import com.powsybl.contingency.contingency.list.criterion.*;
 import com.powsybl.iidm.network.Country;
 
 import java.io.IOException;
-import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
- * @author Etienne Lesot <etienne.lesot@rte-france.com>
+ * @author Etienne Lesot {@literal <etienne.lesot@rte-france.com>}
  */
 public class CriterionDeserializer extends StdDeserializer<Criterion> {
 
@@ -51,38 +49,35 @@ public class CriterionDeserializer extends StdDeserializer<Criterion> {
                     break;
                 case "voltageInterval":
                     parser.nextToken();
-                    voltageInterval = parser.readValueAs(new TypeReference<SingleNominalVoltageCriterion.VoltageInterval>() {
-                    });
+                    voltageInterval = JsonUtil.readValue(deserializationContext, parser,
+                            SingleNominalVoltageCriterion.VoltageInterval.class);
                     break;
                 case "voltageInterval1":
                     parser.nextToken();
-                    voltageInterval1 = parser.readValueAs(new TypeReference<SingleNominalVoltageCriterion.VoltageInterval>() {
-                    });
+                    voltageInterval1 = JsonUtil.readValue(deserializationContext, parser,
+                            SingleNominalVoltageCriterion.VoltageInterval.class);
                     break;
                 case "voltageInterval2":
                     parser.nextToken();
-                    voltageInterval2 = parser.readValueAs(new TypeReference<SingleNominalVoltageCriterion.VoltageInterval>() {
-                    });
+                    voltageInterval2 = JsonUtil.readValue(deserializationContext, parser,
+                            SingleNominalVoltageCriterion.VoltageInterval.class);
                     break;
                 case "voltageInterval3":
                     parser.nextToken();
-                    voltageInterval3 = parser.readValueAs(new TypeReference<SingleNominalVoltageCriterion.VoltageInterval>() {
-                    });
+                    voltageInterval3 = JsonUtil.readValue(deserializationContext, parser,
+                            SingleNominalVoltageCriterion.VoltageInterval.class);
                     break;
                 case "countries":
                     parser.nextToken();
-                    countries = parser.readValueAs(new TypeReference<ArrayList<String>>() {
-                    });
+                    countries = JsonUtil.readList(deserializationContext, parser, String.class);
                     break;
                 case "countries1":
                     parser.nextToken();
-                    countries1 = parser.readValueAs(new TypeReference<ArrayList<String>>() {
-                    });
+                    countries1 = JsonUtil.readList(deserializationContext, parser, String.class);
                     break;
                 case "countries2":
                     parser.nextToken();
-                    countries2 = parser.readValueAs(new TypeReference<ArrayList<String>>() {
-                    });
+                    countries2 = JsonUtil.readList(deserializationContext, parser, String.class);
                     break;
                 case "propertyKey":
                     propertyKey = parser.nextTextValue();
@@ -92,8 +87,7 @@ public class CriterionDeserializer extends StdDeserializer<Criterion> {
                     break;
                 case "propertyValue":
                     parser.nextToken();
-                    propertyValues = parser.readValueAs(new TypeReference<ArrayList<String>>() {
-                    });
+                    propertyValues = JsonUtil.readList(deserializationContext, parser, String.class);
                     break;
                 case "equipmentToCheck":
                     equipmentToCheck = PropertyCriterion.EquipmentToCheck.valueOf(parser.nextTextValue());
@@ -102,7 +96,7 @@ public class CriterionDeserializer extends StdDeserializer<Criterion> {
                     sideToCheck = PropertyCriterion.SideToCheck.valueOf(parser.nextTextValue());
                     break;
                 default:
-                    throw new AssertionError("Unexpected field: " + parser.getCurrentName());
+                    throw new IllegalStateException("Unexpected field: " + parser.getCurrentName());
             }
         }
         if (type == null) {
@@ -112,10 +106,10 @@ public class CriterionDeserializer extends StdDeserializer<Criterion> {
             case PROPERTY:
                 return new PropertyCriterion(propertyKey, propertyValues, equipmentToCheck, sideToCheck);
             case SINGLE_COUNTRY:
-                return new SingleCountryCriterion(countries.stream().map(Country::valueOf).collect(Collectors.toList()));
+                return new SingleCountryCriterion(countries.stream().map(Country::valueOf).toList());
             case TWO_COUNTRY:
-                return new TwoCountriesCriterion(countries1.stream().map(Country::valueOf).collect(Collectors.toList()),
-                        countries2.stream().map(Country::valueOf).collect(Collectors.toList()));
+                return new TwoCountriesCriterion(countries1.stream().map(Country::valueOf).toList(),
+                        countries2.stream().map(Country::valueOf).toList());
             case SINGLE_NOMINAL_VOLTAGE:
                 return new SingleNominalVoltageCriterion(voltageInterval);
             case TWO_NOMINAL_VOLTAGE:
