@@ -6,7 +6,6 @@
  */
 package com.powsybl.iidm.xml;
 
-import com.google.common.collect.ImmutableList;
 import com.powsybl.commons.PowsyblException;
 
 import java.util.List;
@@ -17,18 +16,21 @@ import static com.powsybl.iidm.xml.IidmXmlConstants.ITESLA_DOMAIN;
 import static com.powsybl.iidm.xml.IidmXmlConstants.POWSYBL_DOMAIN;
 
 /**
- * @author Miora Ralambotiana <miora.ralambotiana at rte-france.com>
+ * @author Miora Ralambotiana {@literal <miora.ralambotiana at rte-france.com>}
  */
 public enum IidmXmlVersion {
-    V_1_0(ITESLA_DOMAIN, ImmutableList.of(1, 0)),
-    V_1_1(POWSYBL_DOMAIN, ImmutableList.of(1, 1)),
-    V_1_2(POWSYBL_DOMAIN, ImmutableList.of(1, 2)),
-    V_1_3(POWSYBL_DOMAIN, ImmutableList.of(1, 3)),
-    V_1_4(POWSYBL_DOMAIN, ImmutableList.of(1, 4)),
-    V_1_5(POWSYBL_DOMAIN, ImmutableList.of(1, 5)),
-    V_1_6(POWSYBL_DOMAIN, ImmutableList.of(1, 6)),
-    V_1_7(POWSYBL_DOMAIN, ImmutableList.of(1, 7)),
-    V_1_8(POWSYBL_DOMAIN, ImmutableList.of(1, 8));
+    V_1_0(ITESLA_DOMAIN, List.of(1, 0)),
+    V_1_1(POWSYBL_DOMAIN, List.of(1, 1)),
+    V_1_2(POWSYBL_DOMAIN, List.of(1, 2)),
+    V_1_3(POWSYBL_DOMAIN, List.of(1, 3)),
+    V_1_4(POWSYBL_DOMAIN, List.of(1, 4)),
+    V_1_5(POWSYBL_DOMAIN, List.of(1, 5)),
+    V_1_6(POWSYBL_DOMAIN, List.of(1, 6)),
+    V_1_7(POWSYBL_DOMAIN, List.of(1, 7)),
+    V_1_8(POWSYBL_DOMAIN, List.of(1, 8)),
+    V_1_9(POWSYBL_DOMAIN, List.of(1, 9)),
+    V_1_10(POWSYBL_DOMAIN, List.of(1, 10)),
+    V_1_11(POWSYBL_DOMAIN, List.of(1, 11));
 
     private final String domain;
     private final List<Integer> versionArray;
@@ -40,6 +42,10 @@ public enum IidmXmlVersion {
 
     public String toString(String separator) {
         return versionArray.stream().map(Object::toString).collect(Collectors.joining(separator));
+    }
+
+    public boolean supportEquipmentValidationLevel() {
+        return this.compareTo(V_1_7) >= 0;
     }
 
     public String getNamespaceURI() {
